--- a/28-02-2026.ipynb
+++ b/28-02-2026.ipynb
@@ -2680,20 +2680,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "9285fb0f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### save the file"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "80b30b53",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "code",
